migdb.qvto/transforms/tests/validator_postgresql/test_err_invalid_06_required.qvto
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_06_required(out outModel : ERR);


main() {
	var error : Error := _validationError("Invalid column identifier \"POPOCATEPETL\"",
		"validator_postgresql.qvto"); 
	_errorLog(OrderedSet{error});	 
}