migdb.qvto/transforms/tests/errors/error_renameEntity4b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_renameEntity4b(out inoutModel : ERR);

main(){
	_errorLog(OrderedSet{_evolutionError(1, "Structure doesn't contains entity called Tab", "evolution_app.qvto")});
}